    Other Notes:
        - All layouts from Assignment 4 filled w/ content aside from home and any nested routes

3/1/22
    Main Features:
        - Created MyAccount route
            - Accessible through button on navbar 
        - Created AccountDetails nested route
        - Created Backend 
            - Attempted to get data from backend
            - Repeated NullInjectorError. Usure of cause/solution
            - Being incredibly weird when going to nested route with Error present
    Other Features:
         - Corrected Font 
         - Started formatting on new routes

3/8/2022
    Main Features:
        - Moved all data that uses ProductModel to the backend
            - Sidecar
            - PistolOptics
            - Medical
        - Implemented products.service.ts for all products using the ProductModel format
            - getProductList(component:string) allows for modularity among components
                - specify name of component in parameters, component name matches backend name
        - Got AccountDetails to work correctly
            - Fixed NullInjectorError
            - Clicking github link will actually take you to repository
    Bonus Features:
         - Moved 3x lists of data to backend and implemented them, rather than just one 
         - Fixed Lab 6 Assignment, does what I intended it to do last week
         - Github linking on AccountDetails page
         - Page no longer defaults to home when attempting to access a page with an error 

3/22/2022
    Main Features:
         - Implemented firebase database
         - Built & Deployed site successfully

3/29/2022
    Main Features:
        - Implemented push service to write to backend
            - Made a new service to handle items on home page
            - Swapped read data from local to backend for home page
            - Styled "Admin" page to match site 
            - Added AC1 to backend via service, displayed on home page
             