@@ -1,0 +1,30 @@
+.col-8{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.form-control{
+    background-color: black;
+    border-color: #c1ee4e;
+    opacity: 80%;
+    color: white;
+}
+
+.input-group{
+    padding: 15px;
+    border-color: #c1ee4e;
+}
+
+.btn{
+    background-color: black;
+    color: #c1ee4e;
+    margin-bottom: 15px;
+    margin-left: 15px;
+    margin-top: 15px;
+}
+
+.input-group-text{
+    background-color: black;
+    opacity: 100%;
+    border-color: #c1ee4e;
+    color: #c1ee4e;
+}
