@@ -1,0 +1,33 @@
+<div class="container">
+    <div class="row">
+        <div class="col-2"></div>
+        <div class="col-8">
+            <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
+                <div class="input-group">
+                    <span class="input-group-text">Email</span>
+                    <input type="text" class="form-control" 
+                        placeholder="Email" 
+                        ngModel name="email"
+                        required email>
+                </div>
+
+                <div class="input-group">
+                    <span class="input-group-text">Password</span>
+                    <input type="password" class="form-control" 
+                    placeholder="Password" required 
+                    ngModel name="password"
+                    password minlength="8">
+                </div>
+
+                <button class="btn" type="submit" [disabled]="!authForm.valid">
+                    Login
+                </button>
+
+                <button class="btn" type="submit" [disabled]="!authForm.valid">
+                    Sign Up
+                </button>
+
+            </form>
+        </div>
+    </div>
+</div>
